--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,7 @@
 <html>
 <head>
   <title>Last.fm Duplicates Finder</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-
-    th, td {
-      border: 1px solid black;
-      padding: 8px;
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Last.fm Duplicates Finder</h1>
@@ -43,63 +32,6 @@
     </thead>
     <tbody id="duplicatesTableBody"></tbody>
   </table>
-  <script>
-    document.querySelector('form').addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const username = document.getElementById('username').value;
-      const method = document.getElementById('method').value;
-
-      const response = await fetch('/duplicates', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/x-www-form-urlencoded',
-        },
-        body: `username=${encodeURIComponent(username)}&method=${encodeURIComponent(method)}`,
-      });
-
-      const duplicates = await response.json();
-      console.log('Duplicates:', duplicates);
-      const duplicatesTableBody = document.getElementById('duplicatesTableBody');
-      console.log('Duplicates Table Body:', duplicatesTableBody);
-      duplicatesTableBody.innerHTML = '';
-
-      if (duplicates && duplicates.length > 0) {
-        duplicates.forEach((duplicate) => {
-          console.log('Processing Duplicate:', duplicate);
-          const row = document.createElement('tr');
-          const baseTitleCell = document.createElement('td');
-          baseTitleCell.textContent = duplicate.title;
-          row.appendChild(baseTitleCell);
-
-          const artistCell = document.createElement('td');
-          artistCell.textContent = duplicate.artist;
-          row.appendChild(artistCell);
-
-          const totalPlaycountCell = document.createElement('td');
-          totalPlaycountCell.textContent = duplicate['total-playcount'];
-          row.appendChild(totalPlaycountCell);
-
-          const versionCountCell = document.createElement('td');
-          versionCountCell.textContent = duplicate.versions.length;
-          row.appendChild(versionCountCell);
-
-          const versionsCell = document.createElement('td');
-          const versionsList = document.createElement('ul');
-          duplicate.versions.forEach((version) => {
-            const versionItem = document.createElement('li');
-            versionItem.textContent = JSON.stringify(version, null, 2);
-            versionsList.appendChild(versionItem);
-          });
-          versionsCell.appendChild(versionsList);
-          row.appendChild(versionsCell);
-
-          duplicatesTableBody.appendChild(row);
-        });
-      } else {
-        console.log('No duplicates found');
-      }
-    });
-
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
