--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,23 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Last.fm Duplicates Finder</h1>
-  <form action="/duplicates" method="post">
-    <label for="username">Last.fm Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br><br>
-    <label for="method">Method:</label>
-    <select id="method" name="method" required>
-      <option value="albums">Find Album Duplicates</option>
-      <option value="tracks">Find Track Duplicates</option>
-    </select>
-    <br><br>
-    <input type="submit" value="Find Duplicates">
-  </form>
+  <div class="container">
+    <div>
+      <h1 class="title">Last.fm Duplicates Finder</h1>
+      <form action="/duplicates" method="post">
+        <label for="username">Last.fm Username:</label>
+        <input type="text" id="username" name="username" required>
+        <br><br>
+        <label for="method">Method:</label>
+        <select id="method" name="method" required>
+          <option value="albums">Find Album Duplicates</option>
+          <option value="tracks">Find Track Duplicates</option>
+        </select>
+        <br><br>
+        <input type="submit" value="Find Duplicates">
+      </form>
+    </div>
+  </div>
   <br>
   <h2>Duplicates:</h2>
   <table id="duplicatesTable">
